--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ notebook
 scikit-learn
 matplotlib
 seaborn
-python-box==6.0.2
+python-box
 pyYAML
-ensure==1.0.2
+ensure
 joblib
 types-PyYAML
 Flask
